Updated AGC module The logic in this module is a lot easier to read and understand, more closely resembling common algorithms

--- a/vivado/.gitignore
+++ b/vivado/.gitignore
@@ -45,11 +45,9 @@ unisims
 *.lib
 
 ## dirs
-vivado.cache/
-vivado.hw/
-vivado.ip_user_files/
-vivado.runs/
-vivado.sim/
+*.cache/
+*.hw/
+*.ip_user_files/
 
 ###### for Xilinx Vivado|ISE
 .Xil/
@@ -72,4 +70,3 @@ xvlog.*
 ## checkpoint files
 *.dcp
 
-**.gen
